# irods_project_template_cpp_api_plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/irods/plugins/api/: project_template_common.h  rc_project_template.h  rs_project_template.hpp
include/irods/plugins/api/private/: project_template_common.hpp
src/: client.cpp  plugin_factory.cpp  rc_project_template.cpp  rs_project_template.cpp  server.cpp
